fixed billboard centering issue on ie 11

--- a/src/styles/sections/_billboard.scss
+++ b/src/styles/sections/_billboard.scss
@@ -44,6 +44,12 @@
   }
 }
 
+@media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: none) {
+  .billboard {
+    height: 100vh;
+  }
+}
+
 @media (min-width: 768px) {
   .billboard {
     min-height: 100vh;
